--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@google/genai": "^1.27.0",
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/supabase-js": "^2.76.1",
     "cmdk": "^1.0.0",
@@ -27,10 +28,10 @@
     "framer-motion": "^11.3.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.65.0",
+    "react-hook-form": "^7.66.0",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.12.7",
-    "zod": "^3.23.8",
+    "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
